updated office hours and teaching for spring 2025

--- a/index.html
+++ b/index.html
@@ -5,124 +5,164 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Trevor Loe</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Trevor Loe</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Trevor Loe</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="publications.html">Publications</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="ucla_qualifying_exams.html">UCLA Qualifying Exam Materials</a></li>
-								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
-								<li><a href="contact.html">Contact</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Trevor Loe</h2>
-							<p>Mathematics Ph.D. Student at UCLA</a><div class="col-4"><span class="image fit"><img src="images/me_with_einstein.jpeg" alt="" /></span></div></p>
-						</div>
-					</section>
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Trevor Loe</a></h1>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<section id="about" class="wrapper alt style2">
-							<div class="inner">
-								<h2 class="major">About Me</h2>
-								<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics at UCLA. I graduated as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I am generally interested in research related to applied and computational mathematics related to nonlinear dynamical systems and networks. My technical experience, both as a software engineer and as a mathematics student has involved research in the areas of control theory, particle accelerators, biological modeling, and RF systems.</p>
-								<a href="Ciriculum_Vitae_TrevorLoe_Jan2025.pdf" class="button small">CV</a>
-								<p>Below you can find the research projects I've worked on, my teaching experience, and a list of my publications.</p>
-								<a href="projects.html" class="button">Projects</a>
-								<!-- <a href="activities.html" class="button">Activities</a> -->
-								<a href="teaching.html" class="button">Teaching</a>
-								<a href="publications.html" class="button">Publications</a>
-								<a href="awards_and_recognitions.html" class="button">Awards and Recognitions</a>
-							</div>
-						</section>
-
-						<section id="office_hours" class="wrapper alt style2">
-							<div class="inner">
-								<h2 class="major">Current Office Hours</h2>
-								<p>Wednesday 9-10 in MS 2953</p>
-								<p>Monday 10-11 in the SMC</p>
-							</div>
-						</section>
-
-						<section id="Education" class="wrapper alt style2">
-							<div class="inner">
-								<h2 class="major">Education</h2>
-								<h4></h4>
-												<ul>
-													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics, <i>Summa Cum Laude</i> 
-													<br>Aug. 2019 - Dec. 2023</li>
-													<li><b>UCLA, Los Angeles, CA</b> - Doctor of Philosophy in Mathematics (Applied) 
-													<br>Sep. 2024 - June. 2029</li>
-												</ul>
-							</div>
-						</section>
-
-						<section id="hobbies" class="wrapper alt style1">
-							<div class="inner">
-								<h2 class="major">Hobbies</h2>
-								<p>I've been surfing my whole life, growing up next to the beach. I've also always loved music and playing guitar. More recently I have been enjoying rock climbing and backpacking around different parts of California's central coast area.</p>
-								<section>
-									<h3 class="major"></h3>
-									<h4></h4>
-									<div class="box alt">
-										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/hawaii_hike.jpg" alt="" /></span></div>
-											<div class="col-12"><span class="image fit"><img src="images/backpacking_pano.JPG" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/surf_pic1.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/surf_pic3.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/rock_pic2.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/rock_pic3.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/rock_pic4.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/guiar1.jpg" alt="" /></span></div>
-										</div>
-									</div>
-								</section>
-							</div>
-						</section>
-					
-					</section>
-
-				<!-- Footer -->
+		<!-- Menu -->
+		<nav id="menu">
+			<div class="inner">
+				<h2>Menu</h2>
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="publications.html">Publications</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="ucla_qualifying_exams.html">UCLA Qualifying Exam Materials</a></li>
+					<li><a href="teaching.html">Teaching</a></li>
+					<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+				<a href="#" class="close">Close</a>
 			</div>
+		</nav>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner">
+				<h2>Trevor Loe</h2>
+				<p>Mathematics Ph.D. Student at UCLA</a>
+				<div class="col-4"><span class="image fit"><img src="images/me_with_einstein.jpeg"
+							alt="" /></span></div>
+				</p>
+			</div>
+		</section>
 
-	</body>
+		<!-- Wrapper -->
+		<section id="wrapper">
+
+			<section id="about" class="wrapper alt style2">
+				<div class="inner">
+					<h2 class="major">About Me</h2>
+					<p>Hello! My name is Trevor Loe and I am a Ph.D. student in Applied Mathematics
+						at UCLA. I graduated as a double major in Physics and Mathematics, Summa
+						Cum Laude at the California Polytechnic State University, San Luis
+						Obispo. I am generally interested in research related to numerical
+						linear algebra, optimization, geometry, and high performance computing.
+						My technical experience, both as a software engineer and as a
+						mathematics student has involved research in the areas of control
+						theory, particle accelerators, biological modeling, and RF systems.</p>
+					<a href="Ciriculum_Vitae_TrevorLoe_Jan2025.pdf" class="button small">CV</a>
+					<p>Below you can find the research projects I've worked on, my teaching
+						experience, and a list of my publications.</p>
+					<a href="projects.html" class="button">Projects</a>
+					<!-- <a href="activities.html" class="button">Activities</a> -->
+					<a href="teaching.html" class="button">Teaching</a>
+					<a href="publications.html" class="button">Publications</a>
+					<a href="awards_and_recognitions.html" class="button">Awards and
+						Recognitions</a>
+				</div>
+			</section>
+
+			<section id="office_hours" class="wrapper alt style2">
+				<div class="inner">
+					<h2 class="major">Current Office Hours</h2>
+					<p>Tuesday 11-12 and Thursday 10-11 in MS 2953</p>
+				</div>
+			</section>
+
+			<section id="Education" class="wrapper alt style2">
+				<div class="inner">
+					<h2 class="major">Education</h2>
+					<h4></h4>
+					<ul>
+						<li><b>California Polytechnic State University, San Luis Obispo, CA</b>
+							- Bachelor's of Science in Physics and Mathematics, <i>Summa Cum
+								Laude</i>
+							<br>Aug. 2019 - Dec. 2023
+						</li>
+						<li><b>UCLA, Los Angeles, CA</b> - Doctor of Philosophy in Mathematics
+							(Applied)
+							<br>Sep. 2024 - June. 2029
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<section id="hobbies" class="wrapper alt style1">
+				<div class="inner">
+					<h2 class="major">Hobbies</h2>
+					<p>I've been surfing my whole life, growing up next to the beach. I've also
+						always loved music and playing guitar. More recently I have been
+						enjoying rock climbing and backpacking around different parts of
+						California's central coast area.</p>
+					<section>
+						<h3 class="major"></h3>
+						<h4></h4>
+						<div class="box alt">
+							<div class="row gtr-uniform">
+								<div class="col-12"><span class="image fit"><img
+											src="images/hawaii_hike.jpg"
+											alt="" /></span></div>
+								<div class="col-12"><span class="image fit"><img
+											src="images/backpacking_pano.JPG"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/surf_pic1.jpg"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/surf_pic3.jpg"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/rock_pic2.jpg"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/rock_pic3.jpg"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/rock_pic4.jpg"
+											alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img
+											src="images/guiar1.jpg"
+											alt="" /></span></div>
+							</div>
+						</div>
+					</section>
+				</div>
+			</section>
+
+		</section>
+
+		<!-- Footer -->
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
