--- a/teaching.html
+++ b/teaching.html
@@ -5,87 +5,100 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Trevor Loe - Teaching</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-		<script id="MathJax-script" async
-				src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
-		</script>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Trevor Loe - Teaching</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
+	</script>
+</head>
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Trevor Loe</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="publications.html">Publications</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="ucla_qualifying_exams.html">UCLA Qualifying Exam Materials</a></li>
-								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
-								<li><a href="contact.html">Contact</a></li>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<h1><a href="index.html">Trevor Loe</a></h1>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
+
+		<!-- Menu -->
+		<nav id="menu">
+			<div class="inner">
+				<h2>Menu</h2>
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="publications.html">Publications</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="ucla_qualifying_exams.html">UCLA Qualifying Exam Materials</a></li>
+					<li><a href="teaching.html">Teaching</a></li>
+					<li><a href="awards_and_recognitions.html">Awards and Recognitions</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+				<a href="#" class="close">Close</a>
+			</div>
+		</nav>
+
+		<!-- Wrapper -->
+		<section id="wrapper">
+			<header>
+				<div class="inner">
+					<h2>Teaching</h2>
+					<p>Listed below are my teaching experiences.</p>
+				</div>
+			</header>
+
+			<!-- Begin actual projects-->
+			<!-- Content -->
+			<div class="wrapper">
+				<div class="inner">
+
+					<section>
+						<div id="Teaching">
+							<div></div>
+							<h3 class="major"></h3>
+							<h4>TAing at UCLA</h4>
+							<h4></h4>
+							<ul>
+								<li><b>PIC 10A - Introduction to Programming (C++)</b>
+									Spring 2025</li>
+								<li><b>Math 32A - Calculus of Several Variables</b>
+									Winter 2024</li>
+								<li><b>Math 31A - Differential and Integral Calculus</b>
+									Fall 2024</li>
 							</ul>
-							<a href="#" class="close">Close</a>
+							<section>
+
+								<section>
+									<div id="Tutoring">
+										<div></div>
+										<h3 class="major"></h3>
+										<h4>Tutoring</h4>
+										<h4></h4>
+										<ul>
+											<li><b>AP Physics</b> - Worked
+												as an AP physics tutor
+												Fall semester 2023 for
+												local high school
+												student</li>
+										</ul>
+										<section>
+
+									</div>
 						</div>
-					</nav>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-						<header>
-							<div class="inner">
-								<h2>Teaching</h2>
-								<p>Listed below are my teaching experiences.</p>
-							</div>
-						</header>
-
-						<!-- Begin actual projects-->
-						<!-- Content -->
-							<div class="wrapper">
-								<div class="inner">
-
-									<section>
-										<div id="Teaching"><div></div>
-										<h3 class="major"></h3>
-											<h4>TAing at UCLA</h4>
-											<h4></h4>
-												<ul>
-													<li><b>Math 31A - Differential and Integral Calculus</b> Fall 2024</li>
-													<li><b>Math 32A - Calculus of Several Variables</b> Winter 2024</li>
-												</ul>
-									<section>
-
-									<section>
-										<div id="Tutoring"><div></div>
-										<h3 class="major"></h3>
-											<h4>Tutoring</h4>
-											<h4></h4>
-												<ul>
-													<li><b>AP Physics</b> - Worked as an AP physics tutor Fall semester 2023 for local high school student</li>
-												</ul>
-									<section>
-
-								</div>
-							</div>
-
-				<!-- Footer -->
-					<!-- <section id="footer">
+						<!-- Footer -->
+						<!-- <section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
@@ -128,13 +141,14 @@
 
 			</div> -->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+						<!-- Scripts -->
+						<script src="assets/js/jquery.min.js"></script>
+						<script src="assets/js/jquery.scrollex.min.js"></script>
+						<script src="assets/js/browser.min.js"></script>
+						<script src="assets/js/breakpoints.min.js"></script>
+						<script src="assets/js/util.js"></script>
+						<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
