fixed mistake in button on cern paper

--- a/publications.html
+++ b/publications.html
@@ -79,8 +79,13 @@
 											<td>T. Mastoridis, T. Loe, P.
 												Baudrenghien, and G.
 												Hagmann</td>
-											<td><a href="https://cds.cern.ch/record/2930998"
-													</a>
+											<td><a href="https://cds.cern.ch/record/2930998">
+													Simulation of
+													the Crab
+													Cavity/Beam
+													Interaction in
+													the HL-LHC
+												</a>
 											</td>
 											<td>CERN Technical Notes,
 												Accelerators and Storage
