updated teaching and office hours

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<section id="office_hours" class="wrapper alt style2">
 				<div class="inner">
 					<h2 class="major">Current Office Hours</h2>
-					<p>Tuesday 11-12 and Thursday 10-11 in MS 2953</p>
+					<p>TBD</p>
 				</div>
 			</section>
 
