--- a/teaching.html
+++ b/teaching.html
@@ -70,6 +70,8 @@
 							<h4>TAing at UCLA</h4>
 							<h4></h4>
 							<ul>
+								<li><b>Math 164 - Optimization</b>
+									Summer 2025 Session 6A</li>
 								<li><b>PIC 10A - Introduction to Programming (C++)</b>
 									Spring 2025</li>
 								<li><b>Math 32A - Calculus of Several Variables</b>
